src/objects/SalesAreaToSegmentMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used for setting telesales call interval based on sales area and customer segment (size of company) &amp; sub segment.</description>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesArea__c</fullName>
        <label>SalesArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubSegment__c</fullName>
        <label>SubSegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopSegment__c</fullName>
        <label>TopSegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SalesAreaToSegmentMapping</label>
</CustomObject>